# sample-mcp-server

./: .env.sample  README.md  Taskfile.yml  architecture.md  pyproject.toml
app/: config.py  main.py  mcp_server.py  models.py
app/services/: __init__.py  github_service.py  llm_service.py  mongodb_service.py
